28.10 last fixes